k9 fattvedtak aiven (samme oppsett om k9 vedtakhendelse) Sletter klasser som er erstattet av felles